--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -31,6 +31,7 @@ Monte Carlo truth position.
 
 %% --------------------------------------------- %%
 \section{Experimental setup at the CERN SPS}
+\label{sec:CERN_SPS}
 The Timepix3 telescope is commissioned and tested at the H6 beam of
 the CERN SPS using the $120\,\gev$ pion beam. The assemblies listed in
 \cref{tab:Timepix3Assemblies} are tested as DUTs using this
