--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -215,7 +215,7 @@ implementation of the sensors in TCAD simulations.
       Layer number & Layer \\
       \midrule
       6 & metal\\
-      3 & - \\
+      3 & implant \\
       8 & implant \\
       9 & UBM (for thin film lift off metal) (??) \\
       15 & passivation \\
