--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -748,9 +748,9 @@ fields), the Ramo theorem can be neglected.
 
 \subsection{Spatial resolution}
 
-The spatial resolution of a pixel detector is mainly determined by the pixel
-pitch. But this can be improved by the readout choice (binary or
-analog), the threshold value, the charge sharing, thickness of the
+The spatial resolution of a pixel detector is mainly determined by the
+pixel pitch. But this can be improved by the readout choice (binary or
+analogue), the threshold value, the charge sharing, thickness of the
 detector and the reconstruction algorithm. The effect of the readout
 is studied in the sections here-below.
 
@@ -981,15 +981,14 @@ hitting the sensor within $2p$.
   \label{fig:sigmaTotal}
 \end{figure}
 
-\subsubsection{Analog readout and charge sharing}\label{sec:resolutionAnalogSharing}
-The spatial resolution can be improved more when an analog readout is
-used that delivers a signal proportional to the collected charge as
-illustrated in \cref{fig:SpatResAnaglogChargeSharing}. In this
-case, for multi-hit clusters $\eta$-function as described
+\subsubsection{Analogue readout and charge sharing}\label{sec:resolutionAnalogSharing}
+The spatial resolution can be improved more when an analogue readout
+is used that delivers a signal proportional to the collected charge as
+illustrated in \cref{fig:SpatResAnaglogChargeSharing}. In this case,
+for multi-hit clusters $\eta$-function as described
 in~\cite{Belau:1983eh} is used to reconstruct the hit position within
-the pixels. 
-In the region where only one pixel fires, the resolution is still
-limited to $(p-s)\over \sqrt{12}$.
+the pixels.  In the region where only one pixel fires, the resolution
+is still limited to $(p-s)\over \sqrt{12}$.
 
 The charge carriers follow the field lines to end-up on a certain
 electrode. They are also subject to thermal diffusion which spreads
@@ -1043,7 +1042,7 @@ Q(x_{hit})= \int_{x_1}^{x_2}  \int_{0}^{d} {Q(z) \over {\sqrt{2 \pi
       \node[above] at (1.5, 1.2) {$s$}; 
     \end{scope}
   \end{tikzpicture}
-  \caption{Analog readout with charge sharing}\label{fig:SpatResAnaglogChargeSharing}
+  \caption{Analogue readout with charge sharing}\label{fig:SpatResAnaglogChargeSharing}
 \end{figure}
 
 
