[ActiveEdge] implementation of comments

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -420,3 +420,12 @@ author = "F. Krummenacher",
       reportNumber   = "CERN-OPEN-2012-016",
       SLACcitation   = "%%CITATION = CERN-OPEN-2012-016;%%"
 }
+
+@book{Sze:100213,
+      author        = "Sze, S M",
+      title         = "{Physics of semiconductor devices; 2nd ed.}",
+      publisher     = "Wiley",
+      address       = "New York, NY",
+      year          = "1981",
+      %url           = "http://cds.cern.ch/record/100213",
+}
