--- a/include/Software.tex
+++ b/include/Software.tex
@@ -76,6 +76,7 @@ requires more computation power.
 \end{figure}
 %% --------------------------------------------- %%
 \section{TCAD simulations}
+\label{sec:TCAD}
 Technology Computer-Aided Design (TCAD) as a powerful simulation tool
 is used to optimise and develop semiconductor processing technologies
 as well as the device operation~\cite{synopsysTCAD}. TCAD uses the
