--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -87,6 +87,7 @@ the bias voltages are scanned.
 \section{Experimental results for thin sensors}
 
 \subsection{Measurement of the depletion voltage}
+\label{sec:ThinSensors_depletionVoltage}
 
 The depletion voltage corresponds to the voltage at which the sensor
 is fully depleted and the charge of the full thickness of the sensor
